--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,25 @@ repositories {
 }
 
 dependencies {
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.projectlombok:lombok:1.18.18'
+	annotationProcessor("org.projectlombok:lombok")
+	compileOnly('org.projectlombok:lombok')
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// runtimeOnly 'dev.miku:r2dbc-mysql'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive'
+	implementation group: 'org.mongodb', name: 'mongodb-driver-sync'
+	//implementation group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo'
+	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 test {
